# snn-transformer-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: analyze_lut.py
experiments/: compare.py  train.py
reports/: comparison_report.md  lut_analysis_report.md
snn_transformer/: __init__.py  config.py
snn_transformer/models/: __init__.py  snn_gpu.py  transformer.py
snn_transformer/utils/: __init__.py  data.py
tests/: test_model.py
